--- a/package.json
+++ b/package.json
@@ -98,6 +98,11 @@
     "@xterm/addon-fit": "^0.10.0",
     "@xterm/xterm": "^5.5.0",
     "axios": "^1.7.4",
+    "d3": "^7.9.0",
+    "d3-axis": "^3.0.0",
+    "d3-brush": "^3.0.0",
+    "d3-scale": "^4.0.2",
+    "d3-zoom": "^3.0.0",
     "dotenv": "^16.4.5",
     "fuse.js": "^7.0.0",
     "jsondiffpatch": "^0.6.0",
